Remove margin gap fix

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -370,6 +370,7 @@ main {
   max-width: 800px;
   margin: auto;
   overflow: visible;
+  margin-bottom: 60px;
 }
 
 .container-text h2 {
